--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "leaflet-control-geocoder": "^3.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
