--- a/.github/workflows/update-jobs.yml
+++ b/.github/workflows/update-jobs.yml
@@ -2,7 +2,7 @@ name: Update Jobs Data
 
 on:
   schedule:
-    - cron: "*/30 * * * *" # Run every 30 minutes
+    - cron: "0 6 * * *" # Run every day at 6:00 AM UTC
   workflow_dispatch: # Allow manual trigger
 
 permissions:
